--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
             <div class="card">
                 <img src="MH-title.png" class="card-img-top">
                 <div class="card-body">
-                    <div class="mb-3">
-                        <label for="numberOfDoors" ><b>Please enter the number of buttons: </b></label>
-                        <input type="text" id="numberOfDoors">
-                    </div>
-                    <button class="btn btn-primary" Type="button" onclick="validateInput()">Submit</button>
-                    <p id="textDeProba">Text</p>
-                </div>
-                <h1 class="text-center" id="infoText"> </h1>
                 <div class="container text-center">
-                    <div class="row" id="buttonsRow">
-                        <div class="col" id="buttonsCol">
-
+                    <div class="row">
+                        <div class="mb-3">
+                            <label for="numberOfDoors" ><b>Please enter the number of buttons: </b></label>
+                            <input type="text" id="numberOfDoors">
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3">
+                            <button class="btn btn-primary" id="startButton" Type="button" onclick="validateInput()">Submit</button>
+                        </div>
+                    </div>
+                    <div class="row"></div>
+                            <h1 class="text-center" id="infoText"> </h1>
+                    </div>
+                    <div class="row" id="buttonsRow">
                     </div>
                   </div>
               </div>
+            </div>
         </div>
     </body>
 </html>
