--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="container text-center">
                     <div class="row">
                         <div class="mb-3">
-                            <label for="numberOfDoors" ><b>Please enter the number of buttons: </b></label>
-                            <input type="text" id="numberOfDoors">
+                            <label><b>Please enter the number of buttons: </b></label>
+                            <input type="text" id="numberOfButtons">
                         </div>
                     </div>
                     <div class="row">
